Fixed sizing and spacing issue on project cards

--- a/src/components/ProjectCard/ProjectCard.css
+++ b/src/components/ProjectCard/ProjectCard.css
@@ -6,6 +6,9 @@
     aspect-ratio: 1 / 1.3;
 
     margin: 2rem;
+
+    display: flex;
+    flex-direction: column;
 }
 
 .projectcard__container {
